--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 
-
-
 <body>
-    
+    <header role="banner" class="primary">
+        <h1>Making success</h1>
+    </header>
 </body>
 
 <footer>
